<resources>
    <string name="app_name">QUẢN LÝ THU VÀ CHI DEMO</string>
    <string name="navigation_drawer_open">Quay lại</string>
    <string name="navigation_drawer_middle">Mở sổ Chi</string>
    <string name="navigation_drawer_close">Thoát</string>
    <string name="nav_header_title">QUẢN LÝ SỔ THU CHI</string>
    <string name="nav_header_1">QUẢN LÝ SỔ THU</string>
    <string name="nav_header_2">QUẢN LÝ SỔ CHI</string>
    <string name="nav_header_3">THỐNG KÊ THU VÀ CHI</string>
    <string name="nav_header_subtitle">NHÓM T2K</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">QUẢN LÝ SỔ THU CHI</string>


    <string name="enter_message_name">Name</string>
    <string name="enter_message_email">Email</string>
    <string name="enter_message_mobile">Mobile Number</string>
    <string name="enter_message_password">Password</string>
    <string name="register_now">REGISTER Now</string>
    <string name="login_now">LOGIN Now</string>
    <string name="welcome_back">WELCOME TO MYAPP</string>
    <string name="not_register">Not Register? CLICK Here</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tong_tien_chi">Tổng Khoản Chi: </string>
    <string name="tong_tien_thu">Tổng Khoản Thu: </string>

    <string name="name_error">Vui lòng điền họ tên</string>
    <string name="phone_error">Vui lòng nhập số điện thoại</string>
    <string name="email_error">Vui lòng nhập email</string>
    <string name="error_invalid_email">email không chính xác</string>
    <string name="password_error">Vui lòng nhập password</string>
    <string name="error_invalid_password">Vui lòng nhập password ít nhất 6 kí tự</string>
    <string name="ghi_ch">Ghi chú</string>
    <string name="s_ti_n">Số Tiền</string>
    <string name="t_n_kho_n_chi">Tên Khoản Chi</string>
    <string name="m_kho_n_chi">Mã Khoản Chi</string>
    <string name="kho_n_chi">KHOẢN CHI</string>
</resources>