<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFB90F"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/a4"
        android:background="#fff"></ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:gravity="center|center_vertical"
        android:text="WELCOME TO REGISTER !"
        android:textColor="#000000"
        android:textSize="30sp"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:fontFamily="@font/bungee"
        android:text="Let's do it !"
        android:textColor="#4A4747"
        android:textSize="18sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:background="#FFB90F">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/cardview_dark_background"
            android:background="#FFB90F"
            android:padding="5dp">
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:hint="@string/enter_message_name"
            android:textColor="@color/design_default_color_on_secondary"
            android:textColorHint="#490808"
            android:textSize="18dp"></EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/cardview_dark_background"
            android:background="#FFB90F"
            android:padding="5dp">
        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:hint="@string/enter_message_mobile"
            android:textColor="@color/design_default_color_on_secondary"
            android:textColorHint="#490808"
            android:textSize="18dp"></EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/cardview_dark_background"
            android:background="#FFB90F"
            android:padding="5dp">
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:hint="@string/enter_message_email"
            android:textColor="@color/design_default_color_on_secondary"
            android:textColorHint="#490808"
            android:textSize="18dp"></EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/cardview_dark_background"
            android:background="#FFB90F"
            android:padding="5dp">
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/enter_message_password"
            android:textColor="@color/design_default_color_on_secondary"
            android:textColorHint="#490808"
            android:textSize="18dp"></EditText>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/oval"
        android:text="@string/register_now"
        android:textColor="#fff"></Button>
</LinearLayout>