<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFB90F"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:src="@drawable/a4"></ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:gravity="center|center_vertical"
        android:text="@string/welcome_back"
        android:textColor="#171515"
        android:textSize="30sp"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:fontFamily="@font/bungee"
        android:text="Sign in to continue"
        android:textColor="#4A4747"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="#FFB90F"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFB90F"
            android:padding="5dp"
            android:textColorHint="@color/cardview_dark_background">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Email"
                android:textColor="@color/design_default_color_on_secondary"
                android:textColorHighlight="@android:color/black"
                android:textColorHint="#490808"
                android:textColorLink="@android:color/black"
                android:textCursorDrawable="@android:color/black"></EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFB90F"
            android:padding="5dp"
            android:textColorHint="@color/cardview_dark_background"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/design_default_color_on_secondary"
                android:textColorHighlight="@android:color/black"
                android:textColorHint="#490808"
                android:textColorLink="@android:color/black"
                android:textCursorDrawable="@android:color/black"></EditText>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/oval"
        android:fontFamily="@font/bungee"
        android:text="@string/login_now"
        android:textColor="#fff"></Button>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/not_register"
        android:textColor="#0027FF"></TextView>

</LinearLayout>
